<resources>
    <string name="app_name">Travel Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="about_us">About us</string>
    <string name="contact">Contact</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City Break</string>
    <string name="see_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="price">Price (EUR)</string>
    <string name="start_date">Start Date</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="rating">Rating</string>
    <string name="galery_photo">Galery Photo</string>
    <string name="select">Select</string>
    <string name="take_photo">Take Photo</string>
    <string name="save">Save</string>
    <string name="holiday_2018">Holiday 2018</string>
    <string name="lake_forest">Lake forest</string>
    <string name="ratings">0.0/0.0</string>
    <string name="vacation_photo">Vacation photo</string>
    <string name="favourites">Favourites</string>
    <string name="end_date">End Date</string>
    <string name="holiday">Holiday</string>
</resources>
