<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ManageTrip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_name"
                android:textSize="@dimen/space_16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/holiday_2018"
                android:drawableStart="@android:drawable/ic_menu_info_details"
                android:hint="@string/holiday_2018"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textSize="@dimen/space_16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/destination_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/lake_forest"
                android:drawableStart="@android:drawable/ic_menu_myplaces"
                android:hint="@string/lake_forest"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_8"
                android:text="@string/trip_type"
                android:textSize="@dimen/space_16sp"
                android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/checkBox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5sp"
                        android:layout_weight="1"
                        android:text="@string/city_break"
                        android:textColor="#808080" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/checkBox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5sp"
                        android:layout_weight="1"
                        android:text="@string/see_side"
                        android:textColor="#808080" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/checkBox5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5sp"
                        android:layout_weight="1"
                        android:text="@string/mountains"
                        android:textColor="#808080" />
                </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="@dimen/space_16sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="20sp"
                android:paddingTop="15sp"
                android:paddingRight="20sp"
                android:progress="15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/space_16"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textSize="@dimen/space_16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/start_trip_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space_8"
                    android:text="@string/date"
                    android:textColor="#808080"
                    android:onClick="startDateClicked"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:textSize="@dimen/space_16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/end_trip_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="endDateClicked"
                    android:padding="@dimen/space_8"
                    android:text="@string/date"
                    android:textColor="#808080" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="@dimen/space_16sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/space_16"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/open_gallery_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/galery_photo"
                    android:textSize="@dimen/space_16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/open_gallery_button"
                    android:onClick="openGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space_8"
                    android:text="@string/select"
                    android:textColor="#808080" />

                <ImageView
                    android:id="@+id/gallery_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/space_8"
                    android:cropToPadding="false"
                    android:maxHeight="@dimen/space_32"
                    android:onClick="openGallery"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/holiday"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/open_camera_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_photo"
                    android:textSize="@dimen/space_16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/open_camera_button"
                    android:onClick="openCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space_8"
                    android:text="@string/select"
                    android:textColor="#808080" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/camera_image"
                    android:onClick="openCamera"
                    android:layout_marginTop="@dimen/space_8"
                    android:layout_gravity="center"
                    android:contentDescription="@string/holiday"
                    android:visibility="gone"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="#fff" />
    </LinearLayout>
</ScrollView>
