<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_148"
        android:layout_marginLeft="@dimen/space_16"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginRight="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_8"
        app:cardCornerRadius="@dimen/space_8">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:contentDescription="@string/vacation_photo"
                    android:src="@drawable/paris"
                    android:scaleType="centerCrop"/>
                    <!--tools:srcCompat="@tools:sample/backgrounds/scenic[18]" -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/space_16"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mTripName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/holiday_2018"
                        android:textSize="@dimen/sp_24"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mDestination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lake_forest" />

                    <TextView
                        android:id="@+id/mRatings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/ratings" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/mFavourites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/favourites"
                android:onClick="favouriteIconClicked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_turned_in_not" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

